--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="#"></a>Catégorie</li>
                 <li><a href="#"></a>A Propos</li>
-                <li><a href="#"></a>Contact</li>
+                <li><a href="contact.html"></a>Contact</li>
             </ul>
         </nav>
 
