--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <nav class="menu">
             <ul>
-                <li><a href="#"></a>Catégorie</li>
-                <li><a href="#"></a>A Propos</li>
-                <li><a href="contact.html"></a>Contact</li>
+                <li><a href="index.html" id="menufocus">Catégorie</a></li>
+                <li><a href="#">A Propos</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
 
